[gd_scene load_steps=12 format=2]

[ext_resource path="res://Unit.tscn" type="PackedScene" id=1]
[ext_resource path="res://Background/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://Units/unit_tank.png" type="Texture" id=3]
[ext_resource path="res://Cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameBoard.gd" type="Script" id=5]
[ext_resource path="res://Units/unit_rifles.png" type="Texture" id=6]
[ext_resource path="res://UnitOverlay.tscn" type="PackedScene" id=7]
[ext_resource path="res://UnitPath.tscn" type="PackedScene" id=8]
[ext_resource path="res://Units/unit_armored_car.png" type="Texture" id=9]
[ext_resource path="res://Units/unit_recon.png" type="Texture" id=10]
[ext_resource path="res://UnitInfoLabel.gd" type="Script" id=11]

[node name="TacticalMap" type="Node2D"]

[node name="GameBoard" type="YSort" parent="."]
script = ExtResource( 5 )

[node name="Map" parent="GameBoard" instance=ExtResource( 2 )]
tile_data = PoolIntArray( -1, 0, 65536, -65536, 0, 0, -65535, 0, 65536, -65534, 0, 0, -65533, 0, 2, -65532, 0, 1, -65531, 1, 0, -65530, 0, 2, -65529, 0, 2, -65528, 0, 0, -65527, 0, 65537, -65526, 0, 65536, -65525, 0, 65536, -65524, 0, 2, -65523, 0, 65537, -65522, 0, 2, -65521, 0, 1, -65520, 0, 65536, -65519, 0, 65537, -65518, 0, 1, -65517, 0, 65537, -65516, 0, 65537, -65515, 0, 0, -65514, 0, 65538, -65513, 2, 0, -65512, 0, 1, -65511, 0, 1, -65510, 0, 1, -65509, 0, 65537, -65508, 0, 65537, -65507, 0, 2, -65506, 0, 0, -65505, 0, 65538, -65504, 0, 1, 65535, 0, 2, 0, 0, 65537, 1, 0, 2, 2, 0, 65537, 3, 0, 2, 4, 0, 1, 5, 0, 65538, 6, 0, 65538, 7, 0, 0, 8, 0, 65536, 9, 0, 65537, 10, 0, 65538, 11, 0, 1, 12, 0, 65537, 13, 0, 0, 14, 1, 1, 15, 1, 196610, 16, 1, 3, 17, 0, 65538, 18, 0, 65536, 19, 0, 0, 20, 0, 1, 21, 0, 65536, 22, 0, 1, 23, 2, 65536, 24, 0, 2, 25, 0, 65538, 26, 0, 2, 27, 0, 65537, 28, 0, 65536, 29, 0, 2, 30, 0, 0, 31, 0, 1, 32, 0, 1, 131071, 0, 1, 65536, 0, 65538, 65537, 0, 1, 65538, 0, 65536, 65539, 0, 65538, 65540, 0, 65538, 65541, 0, 65536, 65542, 0, 65537, 65543, 0, 1, 65544, 0, 65537, 65545, 0, 65536, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 1, 65550, 1, 65536, 65551, 0, 65538, 65552, 1, 65536, 65553, 0, 65536, 65554, 0, 0, 65555, 0, 1, 65556, 0, 65538, 65557, 0, 1, 65558, 0, 0, 65559, 2, 65536, 65560, 0, 0, 65561, 0, 2, 65562, 0, 2, 65563, 0, 1, 65564, 0, 1, 65565, 0, 65538, 65566, 0, 2, 65567, 0, 65536, 65568, 0, 65536, 196607, 0, 1, 131072, 0, 2, 131073, 0, 65536, 131074, 0, 65537, 131075, 0, 65538, 131076, 0, 1, 131077, 0, 65538, 131078, 0, 65538, 131079, 0, 65536, 131080, 0, 1, 131081, 0, 65538, 131082, 0, 65537, 131083, 0, 65538, 131084, 0, 2, 131085, 0, 1, 131086, 1, 65536, 131087, 0, 1, 131088, 1, 131073, 131089, 1, 196611, 131090, 0, 65536, 131091, 0, 65538, 131092, 0, 65537, 131093, 0, 65538, 131094, 0, 2, 131095, 2, 65536, 131096, 0, 0, 131097, 0, 2, 131098, 0, 65538, 131099, 0, 65538, 131100, 0, 0, 131101, 0, 2, 131102, 0, 65538, 131103, 0, 1, 131104, 0, 65538, 262143, 0, 65537, 196608, 0, 65536, 196609, 0, 65538, 196610, 0, 65536, 196611, 0, 1, 196612, 0, 65538, 196613, 0, 65536, 196614, 0, 2, 196615, 0, 1, 196616, 0, 65536, 196617, 0, 65538, 196618, 0, 2, 196619, 0, 1, 196620, 0, 1, 196621, 0, 1, 196622, 1, 65536, 196623, 0, 65538, 196624, 0, 0, 196625, 0, 2, 196626, 0, 2, 196627, 0, 65536, 196628, 0, 65536, 196629, 0, 65536, 196630, 0, 65537, 196631, 2, 65536, 196632, 0, 0, 196633, 0, 0, 196634, 0, 1, 196635, 0, 65536, 196636, 0, 65537, 196637, 0, 0, 196638, 0, 65536, 196639, 0, 2, 196640, 0, 65538, 327679, 0, 65538, 262144, 0, 0, 262145, 0, 0, 262146, 0, 65536, 262147, 0, 0, 262148, 0, 2, 262149, 0, 65538, 262150, 0, 2, 262151, 0, 65536, 262152, 0, 65536, 262153, 0, 65537, 262154, 0, 65536, 262155, 0, 65538, 262156, 0, 65538, 262157, 0, 0, 262158, 1, 65536, 262159, 0, 1, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 1, 262163, 0, 65538, 262164, 0, 0, 262165, 0, 65536, 262166, 0, 65537, 262167, 2, 65536, 262168, 0, 65537, 262169, 0, 2, 262170, 0, 65538, 262171, 0, 65538, 262172, 0, 2, 262173, 0, 65537, 262174, 0, 65538, 262175, 0, 0, 262176, 0, 65537, 393215, 0, 65538, 327680, 0, 2, 327681, 0, 0, 327682, 0, 65538, 327683, 1, 8, 327684, 1, 11, 327685, 0, 2, 327686, 0, 65536, 327687, 0, 1, 327688, 0, 0, 327689, 0, 65538, 327690, 0, 0, 327691, 0, 1, 327692, 0, 65538, 327693, 0, 1, 327694, 1, 131073, 327695, 1, 196610, 327696, 1, 196610, 327697, 1, 196610, 327698, 1, 196610, 327699, 1, 3, 327700, 0, 0, 327701, 0, 2, 327702, 0, 65538, 327703, 2, 65536, 327704, 0, 65536, 327705, 0, 65537, 327706, 0, 1, 327707, 0, 2, 327708, 0, 1, 327709, 0, 65537, 327710, 0, 65536, 327711, 0, 65536, 327712, 0, 65536, 458751, 0, 2, 393216, 0, 1, 393217, 0, 2, 393218, 0, 1, 393219, 1, 196616, 393220, 1, 131079, 393221, 0, 0, 393222, 0, 0, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 1, 393226, 0, 65536, 393227, 0, 65537, 393228, 0, 65538, 393229, 0, 0, 393230, 0, 1, 393231, 0, 1, 393232, 0, 2, 393233, 0, 0, 393234, 0, 2, 393235, 1, 131073, 393236, 1, 3, 393237, 0, 65536, 393238, 0, 65538, 393239, 2, 65536, 393240, 0, 65536, 393241, 0, 2, 393242, 0, 65536, 393243, 0, 2, 393244, 0, 0, 393245, 0, 1, 393246, 0, 65538, 393247, 0, 1, 393248, 0, 65537, 524287, 0, 0, 458752, 0, 65536, 458753, 0, 65536, 458754, 0, 1, 458755, 0, 0, 458756, 1, 65536, 458757, 0, 2, 458758, 0, 65536, 458759, 0, 65536, 458760, 0, 65537, 458761, 0, 1, 458762, 0, 1, 458763, 0, 0, 458764, 0, 65536, 458765, 0, 0, 458766, 0, 0, 458767, 0, 1, 458768, 0, 2, 458769, 0, 2, 458770, 0, 65537, 458771, 0, 65538, 458772, 1, 65536, 458773, 0, 2, 458774, 0, 1, 458775, 2, 65536, 458776, 0, 65537, 458777, 0, 1, 458778, 0, 65536, 458779, 0, 0, 458780, 0, 1, 458781, 0, 65538, 458782, 0, 65538, 458783, 0, 0, 458784, 0, 2, 589823, 0, 1, 524288, 0, 65537, 524289, 0, 0, 524290, 0, 2, 524291, 0, 1, 524292, 1, 65536, 524293, 0, 65537, 524294, 0, 65538, 524295, 0, 1, 524296, 0, 2, 524297, 0, 65538, 524298, 0, 2, 524299, 0, 65538, 524300, 0, 2, 524301, 0, 65538, 524302, 0, 65536, 524303, 0, 1, 524304, 0, 65537, 524305, 0, 65537, 524306, 0, 65536, 524307, 0, 65536, 524308, 1, 65536, 524309, 0, 1, 524310, 0, 1, 524311, 2, 65536, 524312, 0, 2, 524313, 0, 1, 524314, 0, 1, 524315, 0, 65536, 524316, 0, 65537, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 65536, 655359, 0, 65538, 589824, 0, 65537, 589825, 0, 65538, 589826, 0, 0, 589827, 0, 1, 589828, 1, 131073, 589829, 1, 196610, 589830, 1, 3, 589831, 0, 65538, 589832, 0, 1, 589833, 0, 65536, 589834, 0, 65536, 589835, 0, 65538, 589836, 0, 65536, 589837, 0, 2, 589838, 0, 2, 589839, 0, 65537, 589840, 0, 65537, 589841, 0, 1, 589842, 0, 65536, 589843, 0, 65538, 589844, 1, 65537, 589845, 1, 196610, 589846, 1, 196611, 589847, 2, 131073, 589848, 2, 196610, 589849, 2, 196610, 589850, 2, 196610, 589851, 2, 196610, 589852, 2, 196610, 589853, 2, 196610, 589854, 2, 196610, 589855, 2, 196610, 589856, 2, 196611, 720895, 0, 1, 655360, 0, 2, 655361, 0, 65538, 655362, 0, 2, 655363, 0, 2, 655364, 0, 65536, 655365, 0, 65537, 655366, 1, 65536, 655367, 0, 1, 655368, 0, 2, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 2, 655372, 0, 65536, 655373, 0, 65536, 655374, 0, 2, 655375, 0, 65538, 655376, 0, 0, 655377, 0, 65537, 655378, 0, 0, 655379, 0, 1, 655380, 1, 65536, 655381, 0, 65537, 655382, 0, 65538, 655383, 0, 0, 655384, 0, 65538, 655385, 0, 0, 655386, 0, 1, 655387, 1, 0, 655388, 0, 65536, 655389, 0, 65537, 655390, 0, 65538, 655391, 0, 0, 655392, 0, 2, 786431, 0, 65538, 720896, 0, 65538, 720897, 0, 65536, 720898, 0, 0, 720899, 0, 65536, 720900, 0, 0, 720901, 0, 1, 720902, 1, 65536, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 0, 720906, 0, 65538, 720907, 0, 2, 720908, 0, 65537, 720909, 0, 65536, 720910, 0, 2, 720911, 0, 0, 720912, 0, 65536, 720913, 0, 2, 720914, 0, 65537, 720915, 0, 65537, 720916, 1, 65536, 720917, 0, 0, 720918, 0, 65536, 720919, 0, 0, 720920, 0, 1, 720921, 0, 1, 720922, 0, 0, 720923, 1, 65536, 720924, 0, 65538, 720925, 0, 2, 720926, 0, 1, 720927, 0, 0, 720928, 0, 1, 851967, 0, 0, 786432, 0, 65536, 786433, 0, 2, 786434, 0, 65537, 786435, 0, 1, 786436, 0, 0, 786437, 0, 0, 786438, 1, 65536, 786439, 0, 0, 786440, 0, 0, 786441, 0, 65536, 786442, 0, 65536, 786443, 0, 2, 786444, 0, 65536, 786445, 0, 65536, 786446, 0, 1, 786447, 0, 65537, 786448, 0, 0, 786449, 0, 2, 786450, 0, 0, 786451, 0, 65538, 786452, 1, 65536, 786453, 0, 0, 786454, 0, 65536, 786455, 0, 65538, 786456, 0, 65536, 786457, 0, 65538, 786458, 0, 1, 786459, 1, 65536, 786460, 0, 0, 786461, 0, 65537, 786462, 0, 65538, 786463, 0, 65538, 786464, 0, 65538, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 65536, 851971, 0, 65538, 851972, 0, 1, 851973, 0, 65538, 851974, 1, 65536, 851975, 0, 2, 851976, 0, 65537, 851977, 0, 1, 851978, 1, 1, 851979, 1, 196610, 851980, 1, 196610, 851981, 1, 196610, 851982, 1, 3, 851983, 0, 2, 851984, 0, 65536, 851985, 0, 65536, 851986, 0, 1, 851987, 0, 1, 851988, 1, 65536, 851989, 0, 0, 851990, 0, 1, 851991, 0, 65537, 851992, 0, 65538, 851993, 0, 1, 851994, 0, 65537, 851995, 1, 65536, 851996, 0, 2, 851997, 0, 2, 851998, 0, 0, 851999, 0, 0, 852000, 0, 1, 983039, 0, 65536, 917504, 0, 65537, 917505, 0, 0, 917506, 0, 65537, 917507, 0, 65536, 917508, 0, 0, 917509, 0, 2, 917510, 1, 131073, 917511, 1, 196610, 917512, 1, 196610, 917513, 1, 196610, 917514, 1, 131075, 917515, 0, 1, 917516, 0, 65537, 917517, 0, 0, 917518, 1, 65536, 917519, 0, 1, 917520, 0, 2, 917521, 0, 65537, 917522, 1, 1, 917523, 1, 196610, 917524, 1, 131075, 917525, 0, 65538, 917526, 0, 65537, 917527, 0, 65536, 917528, 0, 65536, 917529, 0, 65538, 917530, 0, 65538, 917531, 1, 65536, 917532, 0, 65538, 917533, 0, 65538, 917534, 0, 65538, 917535, 0, 1, 917536, 0, 65538, 1048575, 0, 65538, 983040, 0, 0, 983041, 0, 1, 983042, 0, 1, 983043, 0, 65538, 983044, 0, 1, 983045, 0, 65538, 983046, 0, 65537, 983047, 0, 65537, 983048, 0, 2, 983049, 0, 1, 983050, 0, 0, 983051, 0, 2, 983052, 0, 65538, 983053, 0, 65536, 983054, 1, 131073, 983055, 1, 196610, 983056, 1, 2, 983057, 1, 196610, 983058, 1, 131075, 983059, 0, 65536, 983060, 0, 1, 983061, 0, 65537, 983062, 0, 65538, 983063, 0, 65536, 983064, 0, 0, 983065, 0, 65537, 983066, 0, 0, 983067, 1, 65536, 983068, 0, 2, 983069, 0, 1, 983070, 0, 65536, 983071, 0, 2, 983072, 0, 0, 1114111, 0, 65537, 1048576, 0, 65536, 1048577, 0, 1, 1048578, 0, 2, 1048579, 0, 1, 1048580, 0, 1, 1048581, 0, 65538, 1048582, 0, 65538, 1048583, 0, 65538, 1048584, 0, 65537, 1048585, 0, 65537, 1048586, 0, 65536, 1048587, 0, 0, 1048588, 0, 65536, 1048589, 0, 65538, 1048590, 0, 65537, 1048591, 0, 0, 1048592, 1, 65536, 1048593, 0, 0, 1048594, 0, 65538, 1048595, 0, 65537, 1048596, 0, 0, 1048597, 0, 65536, 1048598, 0, 65537, 1048599, 0, 65536, 1048600, 0, 2, 1048601, 0, 65537, 1048602, 0, 65538, 1048603, 1, 65536, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 65536, 1048607, 0, 65537, 1048608, 0, 65536, 1179647, 0, 65536, 1114112, 0, 1, 1114113, 0, 1, 1114114, 0, 0, 1114115, 0, 65538, 1114116, 0, 65536, 1114117, 0, 65536, 1114118, 0, 65537, 1114119, 0, 0, 1114120, 0, 65536, 1114121, 0, 0, 1114122, 0, 65536, 1114123, 0, 2, 1114124, 0, 65536, 1114125, 0, 1, 1114126, 0, 2, 1114127, 0, 65538, 1114128, 1, 65536, 1114129, 0, 65538, 1114130, 0, 65538, 1114131, 0, 65536, 1114132, 0, 65536, 1114133, 0, 2, 1114134, 0, 1, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 1, 1, 1114139, 1, 131075, 1114140, 0, 2, 1114141, 0, 65538, 1114142, 0, 65538, 1114143, 0, 65536, 1114144, 0, 0, 1245183, 0, 1, 1179648, 0, 65537, 1179649, 0, 1, 1179650, 0, 65538, 1179651, 0, 65536, 1179652, 0, 2, 1179653, 0, 2, 1179654, 0, 65536, 1179655, 0, 65537, 1179656, 0, 0, 1179657, 0, 65537, 1179658, 0, 65536, 1179659, 0, 1, 1179660, 0, 65536, 1179661, 0, 65536, 1179662, 0, 2, 1179663, 0, 2, 1179664, 1, 131072, 1179665, 0, 1, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 2, 1179669, 0, 65537, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 65537, 1179673, 0, 0, 1179674, 1, 131072, 1179675, 0, 65536, 1179676, 0, 65537, 1179677, 0, 65536, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 2 )

[node name="Cursor" parent="GameBoard" instance=ExtResource( 4 )]

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource( 7 )]
cell_size = Vector2( 20, 20 )

[node name="UnitPath" parent="GameBoard" instance=ExtResource( 8 )]
cell_size = Vector2( 20, 20 )

[node name="Unit" parent="GameBoard" groups=["Units"] instance=ExtResource( 1 )]
position = Vector2( 218, 197 )
skin = ExtResource( 3 )
move_range = 5
armor_type = "light tank"
is_selectable = true

[node name="Unit2" parent="GameBoard" groups=["Units"] instance=ExtResource( 1 )]
position = Vector2( 181, 157 )
skin = ExtResource( 6 )
unit_name = "rifles"
move_type = "foot"
move_range = 3
armor_type = "light infantry"
weapon_primary = "rifle"
weapon_ammo = -1
weapon_ammo_max = -1
is_selectable = true

[node name="Unit3" parent="GameBoard" groups=["Units"] instance=ExtResource( 1 )]
position = Vector2( 188, 245 )
skin = ExtResource( 6 )
unit_name = "rifles"
move_type = "foot"
move_range = 3
armor_type = "light infantry"
weapon_primary = "rifle"
weapon_ammo = -1
weapon_ammo_max = -1
is_selectable = true

[node name="Unit4" parent="GameBoard" groups=["Units"] instance=ExtResource( 1 )]
position = Vector2( 291, 111 )
skin = ExtResource( 10 )
unit_name = "recon"
move_type = "wheels"
move_range = 8
weapon_primary = "machine gun"
weapon_secondary = ""
is_selectable = true

[node name="Unit5" parent="GameBoard" groups=["Units"] instance=ExtResource( 1 )]
position = Vector2( 256, 232 )
skin = ExtResource( 9 )
unit_name = "recon"
move_type = "wheels"
move_range = 7
armor_type = "light vehicle"
weapon_secondary = "-1"
is_selectable = true

[node name="EndTurnButton" type="Button" parent="GameBoard"]
margin_left = 9.0
margin_top = 12.0
margin_right = 106.0
margin_bottom = 40.0
text = "End Turn"

[node name="UnitInfoLabel" type="RichTextLabel" parent="GameBoard"]
margin_left = 5.0
margin_top = 181.0
margin_right = 135.0
margin_bottom = 268.0
rect_pivot_offset = Vector2( 79, 61 )
fit_content_height = true
script = ExtResource( 11 )

[connection signal="unit_selected" from="GameBoard" to="GameBoard/Cursor" method="_on_GameBoard_unit_selected"]
[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_moved"]
[connection signal="pressed" from="GameBoard/EndTurnButton" to="GameBoard" method="_on_Button_pressed"]
